Fix Dark Mode for mini badges below user avatar
Summary:
Do not hardcode white color; use a variable instead so there is sufficient contrast in Dark Mode.

Refs T15056

Test Plan:
* Assign a badge to a user
* Log in as that user
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to a task and look at the badge icon below the user avatar.

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26406

--- a/webroot/rsrc/css/phui/phui-badge.css
+++ b/webroot/rsrc/css/phui/phui-badge.css
@@ -178,7 +178,7 @@
 }
 
 .phui-badge-mini .phui-icon-view {
-  color: #fff;
+  color: {$page.content};
   font-size: 12px;
   margin: 0;
 }
